fix for error message aligntment

--- a/src/css/components/steps/step-7.styl
+++ b/src/css/components/steps/step-7.styl
@@ -87,6 +87,7 @@
       width 30%
       max-width 159px
       height 38px
+      vertical-align top
 
     .link-list, .copyright
       position absolute
